# MovieLens-RecSys

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tenant_roles.py  0002_create_tenants_table.py  0003_add_tenant_id_to_scoped_tables.py  0004_enable_rls_on_scoped_tables.py
data/raw/: ml-25m.dvc
docs/: eda.md
docs/adr/: 0001-evaluation-protocol.md  0002-implicit-feedback-label.md  0003-two-stage-architecture.md  0004-item-item-before-two-tower.md  0005-lightgbm-over-neural-ranker.md  0006-two-tower-retrieval-architecture.md  0007-auth-provider-keycloak.md  0008-multi-tenancy-rls.md  0009-feature-store-feast.md  0010-synthetic-load-k6.md  0011-cold-start-coverage.md
docs/adr/frontend/: 0001-frontend-framework.md
infra/: prometheus.yml
infra/keycloak/realms/: default-realm.json  demo-realm.json
infra/mlflow/: Dockerfile
infra/pgbouncer/: pgbouncer.ini  userlist.txt
infra/postgres-init/: 01-create-mlflow-db.sql
notebooks/: eda.py
src/: config.py
src/auth/: __init__.py  jwks.py  middleware.py
src/data/: download.py  ingest.py  load.py  schema.py  split.py
src/evaluation/: __init__.py  metrics.py  protocol.py
src/features/: __init__.py  pipeline.py
src/models/candidates/: __init__.py  cf.py  itemitem.py  popularity.py  twotower.py
src/models/ranker/: lgbm.py
src/serving/: app.py  startup_checks.py
src/serving/tenancy/: __init__.py  router.py
src/training/: cf.py  itemitem.py  popularity.py  ranker.py  twotower.py
tests/tenant_isolation/: conftest.py  test_no_cross_tenant_leak.py
tests/unit/: test_auth_jwks.py  test_auth_middleware.py  test_cf.py  test_config.py  test_download.py  test_evaluation.py  test_features.py  test_itemitem.py  test_lgbm.py  test_popularity.py  test_ranker_training.py  test_split.py  test_tenancy_router.py  test_twotower.py
web/: README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
