[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movielens-recsys"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Data
    "psycopg2-binary",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pandas",
    "numpy",
    # ML
    "torch",
    "lightgbm",
    "scikit-learn",
    "implicit",
    "faiss-cpu",
    # Feature store
    "feast[redis]>=0.40",
    # Tracking
    "mlflow",
    # Orchestration
    "prefect",
    # Serving
    "fastapi",
    "uvicorn[standard]",
    "redis",
    # Monitoring
    "evidently",
    "prometheus-client",
    # Config
    "pydantic-settings",
    # DVC
    "dvc[s3]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "types-redis",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
